istio/shop-app-virtual-svc.yaml
# Virtual service configuration for canary deployment redirecting the requests from http(s)://<host>/... to
# the destination with host as 'product.default.svc.cluster.local', subset v1 and v2 wit a 90-10 traffic split
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shop-app
spec:
  hosts:
    - "*"
  gateways:
    - shop-app-gateway
  http:
    - route:
      - destination:
          host: product.default.svc.cluster.local
          subset: v1
          port:
            number: 8080
        weight: 90
      - destination:
          host: product.default.svc.cluster.local
          subset: v2
          port:
            number: 8080
        weight: 10
